[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
## log
log = { version = "0.4.17" }
simplelog = { version = "0.12.0", optional = true }
## wasm
wasmtime = { version = "3.0.1" }
## error
anyhow = { version = "1.0.66" }
## custom
sdk = { path = "../sdk" }


[features]
default = ["dev"]
dev = ["simplelog"]
