[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
## log
log = { version = "0.4.17" }
simplelog = { version = "0.12.0", optional = true }
## wasm
wasmtime = { version = "3.0.1" }
## error
anyhow = { version = "1.0.66" }
## sdk
sdk_std = { path = "../sdk/std" }
sdk_market = { path = "../sdk/market" }


[features]
default = ["dev"]
dev = ["simplelog"]
